# Hyperlocal-Charity-and-Help-Network

./: README.md
backend/: Cargo.toml  user_credentials.txt
backend/migrations/: 20250117130152_charity.down.sql  20250117130152_charity.up.sql  20250124194208_sample_data.up.sql
backend/src/: auth.rs  db_service.rs  handlers.rs  main.rs  models.rs
backend/src/api/: api.rs
backend/src/auth_service/: auth.rs
backend/src/chat_service/: chatserver.rs  connect_disconnect.rs  mod.rs  websocketsession.rs
backend/src/db_service/: db_service.rs  mod.rs
backend/src/models/: models.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/About/: page.js
frontend/app/chatpage/: page.js
frontend/app/mainWeb/: page.js
frontend/app/newuser/: page.js
frontend/app/postadder/: page.js
frontend/app/profile/: page.js
frontend/app/profile/[userid]/: page.js
frontend/app/signup/: form.js  page.js
frontend/components/: card.js  navbar.js  postcomponents.js  postform.js
frontend/components/card/: card.js  postcomponents.js  postform.js
frontend/components/chatfunc/: ChatSidebar.js  ChatWindow.js
frontend/components/homecomp/: page.js
frontend/components/imagecousel/: page.js
frontend/components/ui/: dropdown-menu.js  sheet.js  theme-context.js
frontend/components/userprofile/: icon.js  profilecomponents.js  userprofile.js  userprofileform.js
frontend/lib/: api.js
